--- a/src/main/webapp/resources/assets/css/login.css
+++ b/src/main/webapp/resources/assets/css/login.css
@@ -24,17 +24,17 @@
 .login {
   	padding-top: 60px;
 	/* fallback */
-	background-color: #609511;
+	background-color: #416cb6;
 	/* Safari 4-5, Chrome 1-9 */
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#85CE17), to(#609511));
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1B2D4D), to(#416cb6));
 	/* Safari 5.1, Chrome 10+ */
-	background: -webkit-linear-gradient(top, #85CE17, #609511);
+	background: -webkit-linear-gradient(top, #416cb6, #1B2D4D);
 	/* Firefox 3.6+ */
-	background: -moz-linear-gradient(top, #85CE17, #609511);
+	background: -moz-linear-gradient(top, #416cb6, #1B2D4D);
 	/* IE 10 */
-	background: -ms-linear-gradient(top, #85CE17, #609511);
+	background: -ms-linear-gradient(top, #416cb6, #1B2D4D);
 	/* Opera 11.10+ */
-	background: -o-linear-gradient(top, #85CE17, #609511);
+	background: -o-linear-gradient(top, #416cb6, #1B2D4D);
 }
 .login .logo,
 .login .single-sign-on,
@@ -60,7 +60,7 @@
   padding-bottom: 15px;
   margin:0 auto;
 }
-.login .box .content table td.left {width: 200px; background: url(../img/rosesystems_logo.png) 100px 100% no-repeat; background-position: left top;}
+.login .box .content table td.left {width: 200px; background: url(../img/fastcat-cat.png) 0px 100% no-repeat; background-position: left top;}
 .login .box .content table td.right {width: 300px; }
 
 .login .box form {
